--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npx vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "npm run build:actual",
+    "build:actual": "vite build",
+    "preview": "vite preview",
+    "postinstall": "chmod +x ./node_modules/.bin/vite"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
@@ -16,8 +17,7 @@
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.1.8",
-    "tiny-slider": "^2.9.4",
-    "vite": "^6.3.5"
+    "tiny-slider": "^2.9.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
